--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             <h1>Hello Book</h1>
         </header>
         <section class="content">
+                <img src="img/books.jpg" alt="">
                 <h1>Your Book is here</h1>
                 <p> Hello book is your go-to book archive for any genre of books in the world</p>
-                <p> Hello book is your go-to book archive for any genre of books in the world</p>
+               
         </section>
         <div class="button">
             <input type="text">
