--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
         <section class="content">
                 <img src="img/books.jpg" alt="">
-                <h1>Your Book is here</h1>
+                <h1>Your Book here</h1>
                 <p> Hello book is your go-to book archive for any genre of books in the world</p>
                
         </section>
