--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="wrapper">
         <nav class="navbar">
             <ul>
-                <li><a href="#">Login</a></li>
+                <li><a href="login.html">Login</a></li>
                 <li><a href="#">Sign up</a></li>
                 <li><a href="#">Help</a></li>
             </ul>
