--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         <li><a href="#">Legend of frog</a></li>
                 </ul>
             </div>
-            <footer class="footer">darotbookshop 2018 </footer>
-        
+            <footer class="footer">darotbookshop 2018 &copy;</footer>
+         
     </section>
 
 </body>
