--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                     <form>
                         <input type="text" id="username" placeholder="Username" required/>
                         <input type="password" id="password" placeholder="Password" required/>
-                        <div class="submit"><a href="#">Sign in</a></div> 
+                        <div class="submit"><a href="profile.html">Sign in</a></div> 
                         <div class="help"><a href="#">Can not sign in?</a></div
                     </form>
                 
