--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                         <input type="text" id="username" placeholder="Username" required/>
                         <input type="password" id="password" placeholder="Password" required/>
                         <div class="submit"><a href="profile.html">Sign in</a></div> 
-                        <div class="help"><a href="#">Can not sign in?</a></div
+                        <div class="help"><a href="#">Can not sign in?</a></div>
                     </form>
                 
                     <p>Dont have an account? <a href="#"> Register now</a></p> 
